# binance-sdk-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  todos.txt
examples/: README.md  binance_order_rate_limiting.rs  binance_rest_account_general.rs  binance_rest_dynamic_rate_limiting.rs  binance_rest_spot_account.rs  binance_rest_spot_market.rs  binance_websocket_price_feed.rs
src/: client.rs  config.rs  errors.rs  lib.rs  model.rs  result.rs  serde_helpers.rs  util.rs
src/rest/: endpoints.rs  inner_client.rs  mod.rs  serde_helpers.rs
src/rest/account_general/v1/: mod.rs  responses.rs
src/rest/core/: mod.rs
src/rest/core/inner_client/: ip_rate_limit_manage.rs  methods.rs  mod.rs  rate_limit_manage.rs  unfilled_order_rate_limit_manage.rs
src/rest/core/rate_limiter/: error.rs  initialization.rs  mod.rs
src/rest/core/rate_limiter/ip_rate_limit_manager/: manage.rs  mod.rs  read.rs  weight_calculators.rs
src/rest/core/rate_limiter/order_rate_limit_manager/: manage.rs  mod.rs  read.rs
src/rest/spot/: mod.rs
src/rest/spot/account/: account_balance.rs  account_order_cancel.rs  account_order_custom.rs  account_order_info.rs  account_order_limit.rs  account_order_market.rs  account_order_market_with_qty.rs  account_order_stop_limit.rs  account_sor_allocations_history.rs  account_stp_orders_info.rs  account_trade_history.rs  account_trade_rate_limits.rs  mod.rs  model.rs  order_builder.rs
src/rest/spot/account_v3/: account_balance.rs  responses.rs
src/rest/spot/general/: mod.rs  model.rs
src/rest/spot/general_v3/: mod.rs  responses.rs
src/rest/spot/market/: market_depth.rs  market_klines.rs  market_ticker_info.rs  market_ticker_price.rs  market_trades_history.rs  market_trades_history_agg.rs  mod.rs  model.rs
src/rest/spot/market_v3/: enums.rs  market_depth.rs  market_instrument_info.rs  market_klines.rs  market_ticker_info.rs  market_ticker_price.rs  market_trades_history.rs  market_trades_history_agg.rs  requests.rs  responses.rs
src/rest/spot/trade_v3/: requests.rs  trade_history.rs  trade_order_cancel.rs  trade_order_custom.rs  trade_order_market.rs  trade_order_stop_limit.rs  trade_sor_allocations_history.rs  trade_stp_orders_info.rs
src/rest/spot/user_stream/: mod.rs
src/rest/spot/user_stream_v3/: mod.rs
src/rest/spot/v3/: mod.rs
src/websocket_stream/: endpoints.rs  mod.rs
src/websocket_stream/spot/: events.rs  mod.rs
(+34 files in other folders)
