[package]
name = "binance-sdk-rs"
version = "0.2.5"
license = "MIT"
authors = ["anlithov <anlithov@gmail.com>"]
edition = "2024"
description = "Rust Async SDK for the Binance"
keywords = ["crypto", "trading", "binance"]
repository = "https://github.com/anlithov/binance-api-rs"
readme = "README.md"

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = '1.0.97'

[dev-dependencies]
tokio = { version = "1.43.0", features = ['macros', 'rt-multi-thread'] }
dotenvy = "0.15.7"