[package]
name = "binance-sdk-rs"
version = "0.3.11"
license = "MIT"
authors = ["anlithov <anlithov@gmail.com>"]
edition = "2024"
description = "Rust Async SDK for the Binance"
keywords = ["crypto", "trading", "binance"]
repository = "https://github.com/anlithov/binance-api-rs"
readme = "README.md"

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = '1.0.98'
tokio = { version = "1.46.1", features = ['macros', 'rt-multi-thread'] }
tokio-tungstenite = { version = "0.27.0", features = ["tokio-native-tls", "native-tls"] }
futures-util = "0.3.31"

[dev-dependencies]
dotenvy = "0.15.7"